Fix incorrect portfolio items alignment

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -258,7 +258,6 @@ a:any-link:hover{
 
 /* styles for portfolio section */
 .PortfolioItemsContainer{
-  display: flex;
   flex-direction: column;
   padding: 30px 0px;
   justify-content: center;
@@ -269,6 +268,7 @@ a:any-link:hover{
   display: inline-block;
   padding: 20px 10px;  
   transition:ease 0.3s filter;
+
 }
 .PortfolioItem img{
   width: 500px;
